--- a/package.json
+++ b/package.json
@@ -1,31 +1,33 @@
 {
-  "name": "nucampsite",
-  "version": "1.0.0",
-  "description": "This is a website for the fictional campsites review site Nucamp",
-  "main": "index.html",
-  "scripts": {
-    "lite": "lite-server",
-    "start": "npm run lite",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "An Quach",
-  "license": "ISC",
-  "devDependencies": {
-    "lite-server": "^2.6.1"
-  },
-  "dependencies": {
-    "bootstrap": "^4.5.2",
-    "bootstrap-social": "^5.1.1",
-    "font-awesome": "^4.7.0",
-    "jquery": "^3.5.1",
-    "popper.js": "^1.16.1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/quachan888/nucampsite.git"
-  },
-  "bugs": {
-    "url": "https://github.com/quachan888/nucampsite/issues"
-  },
-  "homepage": "https://github.com/quachan888/nucampsite#readme"
+    "name": "nucampsite",
+    "version": "1.0.0",
+    "description": "This is a website for the fictional campsites review site Nucamp",
+    "main": "index.html",
+    "scripts": {
+        "lite": "lite-server",
+        "scss": "node-sass -o css/ css/",
+        "start": "npm run lite",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "An Quach",
+    "license": "ISC",
+    "devDependencies": {
+        "lite-server": "^2.6.1",
+        "node-sass": "^7.0.0"
+    },
+    "dependencies": {
+        "bootstrap": "^4.5.2",
+        "bootstrap-social": "^5.1.1",
+        "font-awesome": "^4.7.0",
+        "jquery": "^3.5.1",
+        "popper.js": "^1.16.1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/quachan888/nucampsite.git"
+    },
+    "bugs": {
+        "url": "https://github.com/quachan888/nucampsite/issues"
+    },
+    "homepage": "https://github.com/quachan888/nucampsite#readme"
 }
